@@ -311,6 +311,7 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_mixer_music.html#fadeout>pygame.mixer.music.fadeout</a> - fadeout current music<br>
 <a href=ref/pygame_mixer_music.html#get_busy>pygame.mixer.music.get_busy</a> - query state of the music<br>
 <a href=ref/pygame_mixer_music.html#get_endevent>pygame.mixer.music.get_endevent</a> - query the current music finished event<br>
+<a href=ref/pygame_mixer_music.html#get_pos>pygame.mixer.music.get_pos</a> - query music position<br>
 <a href=ref/pygame_mixer_music.html#get_volume>pygame.mixer.music.get_volume</a> - query music volume<br>
 <a href=ref/pygame_mixer_music.html#load>pygame.mixer.music.load</a> - load current music<br>
 <a href=ref/pygame_mixer_music.html#pause>pygame.mixer.music.pause</a> - pause the playing music<br>
